# parser

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  cloudbuild.yaml  config.dev.toml  example.config.toml
.sqlx/: query-0187a411c355f0794fce9dc91b31ce9b892379adf3f01c6cf7dd9c3c0e669022.json  query-03c60b61cf5bdb2e1a691e9b8ef99f64661aa498422655ad6589cdc197f5cbc4.json  query-04db85fbbf0248bb3c02d3df09824c087f5b066f7934aeae99857e93a2ee7640.json  query-09d5d06c6282cbed01a42913655ff245d2897187cc3d6c0e32904d0151f6992e.json  query-0ac6c0e701563d960e2322a902d49c6b1eb26e7420922e92ff8b7f9ab08c8fee.json  query-0fed992b2adc1bb3d81b53274b62e5bf27f5c6289455ec78c7a83342c8e4cee4.json  query-11a99692d73f8611b54a599e7aea411230026ed07abeaac1bda7e3f4290bdc67.json  query-121fe782ca1e8339b82c749fffb58b9db66e59660f96efefed9267174f06fb67.json  query-148a385167abce3256f0dd531383a16eaf75e1dae236b77e584050028040f56d.json  query-174e12bc1ddef0cccc9c47b6c3bd3b8f6c1b890e88150fb6419204168b28b611.json  query-1b959fc8f55f4d44273e942ee70039a86781bcde2d2adb8b34db7511aa7bf0b3.json  query-1ddaeb0a27695497dfa9c300edbd70ee95bf62f618359a03f96c7d139d213856.json  query-3064c7ce1e763060bbffe4d6f6857b040652d1d580b602906b480f683d592ecd.json  query-3659b98675ac334705ffb4bc78b1117c10082c07a02e8fceb6fde2b0da4300fb.json  query-37114c621b29d9a4e9023c336a40ae14b234aace0112373b8a425eb20ad923de.json  query-3ad4aea5d49de799b44ec6d6599b39c085c926ffa18a1730e5906b3a60161966.json  query-403b6052625970e4dc7b32dfcafeda38adc4b7af99a38bcf6f3ce63729823890.json  query-4a370bef1791e8aa7c849fcf5d2d1b2b10bfe47407e8acc534462967b863ecac.json  query-4b245979363e59c93c1916a421d0d14f6621055e66340285228cf1e305eb7e76.json  query-4d7ada8272a346c4a7edf13398a7c192cf137715e0974fc12e4c5383d651ecd2.json  query-5b2605a42efa437fba6106b49017cb34fd1e74ccf2185681eefce42edffd491e.json  query-5dbf0a2cc792787ad7357f84dfc1000dfe57f3e10efdcfd37e785bab95b2aa30.json  query-62cba866d33e061af16a3b035f79b418f16ac0e9918b47b063aff3b91ac1a4d6.json  query-64a79efd7006fd2c60058b0ad787f87c2913b5945c8894edbf7b72c4ea31548c.json  query-676935d35bb642090112f655a88c3599b4b6dbf332a3099af58528ba142e012e.json  query-68090cec5d288c0f32c63473b7f439e2686ca01dfbb86009915bb22c6483727b.json  query-68f4de067ad47ccd3df0c5158767f1cefb03bf35af2ba49108e14b99a7c5ab9b.json  query-6cc1ec420f0d859e6c642bb0a6a2dbd0e035a6e87ee1f61b65db0c500a43750c.json  query-6e561c60921788eed14960736865f3f7a7a1738624bb504aae46c6820df1ee7b.json  query-6e7d968001204a83bb72007c7d6290890378df95d5d68695b7289bf2796fd2be.json  query-7211263cfc442374b4a7ccf6dbf821ab0f22e6821d403f487b9b08f63c671c9f.json  query-72506dfef252b84a4b719d462ada8460691d527ff6ae17208ea0fd2befc23044.json  query-726196fd72a32c7e2447449c8673686165c0996ea52dbd7e1219b59edc0af185.json  query-788f011c62f3a00e86231b5a6fbc86afbd4b905c2406b1859445ebf4102c3bdd.json  query-7992d40f8837ed263781e6e3a5b84793d3f48ea4162dce02251b0eae8262252d.json  query-7acbcbf5b028ea1e8bfd000fb7b98d458037fdce2d38f23862c3c6a9c79fb125.json  query-7b5cab9d5f831ab9286eb0884e501b70208da622386cc24574c3a06f8b8259dc.json  query-7e638e611f13a453732a7abbaffa2e24cf36c16445ec7737fa3d5f730c04507e.json  query-89078ba24c200dc70af8690dcd66a0eb7188fd3967698f30a4af671e72566fa3.json  query-8b09c31d7bc07f426ecd8906ea7ecb8f92a0152950868d60d7b33e43c15bc277.json  (+47 more)
assets/: main.css
deploy/: .env.single.example  Caddyfile  deploy.sh  docker-compose.yml  init-db.sql
docs/: build-optimizations.md
docs/plans/: multi-contact.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: api-mocks.ts  env.ts  helpers.ts  test-activity.gpx
e2e/specs/: api.spec.ts  federation-club.spec.ts  mobile-ux.spec.ts  navigation.spec.ts
migrations/: 0001_schema.sql  0002_hash_api_tokens.sql
parser/: Cargo.toml
parser/src/: lib.rs
src/: lib.rs  main.rs
src/db/: error.rs  mod.rs  pool.rs  types.rs
src/db/models/: account.rs  activity.rs  actor.rs  delivery.rs  exercise.rs  follow.rs  media_attachment.rs  mod.rs  notification.rs  object.rs  otp.rs
src/db/queries/: account.rs  activity.rs  actor.rs  announce.rs  delivery.rs  exercise.rs  follow.rs  like.rs  media_attachment.rs  mod.rs  notification.rs  object.rs  otp.rs
src/server/: app.rs  auth.rs  cli.rs  config.rs  delivery.rs  error.rs  id.rs  mod.rs  notify.rs  state.rs
src/server/impls/: actor.rs  exercise.rs  mod.rs  note.rs
src/server/protocol/: accept.rs  announce.rs  context.rs  create.rs  create_exercise.rs  delete.rs  exercise.rs  follow.rs  group.rs  like.rs  mod.rs  move_activity.rs  (+7 more)
src/web/: app.rs  browser.rs  format.rs  hooks.rs  image.rs  main.rs  mod.rs  server.rs  server_fns.rs
tests/: api_integration.rs
(+42 files in other folders)
